--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,31 @@ keyword: "IT Blog" #关键词
 url: "https://neomx7.github.io"          # 这个就是填写你的博客地址
 baseurl: ""      # 这个我们不用填写
 
+# Build settings
+# from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
+permalink: pretty
+paginate: 10
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+
+
+# Gems
+# from PR#40, to support local preview for Jekyll 3.0
+gems: [jekyll-paginate]
+
+
+# Markdown settings
+# replace redcarpet to kramdown,
+# although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
+# document: http://jekyllrb.com/docs/configuration/#kramdown
+markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM                            # use Github Flavored Markdown !important
+
+
+
+
 # Sidebar settings  侧边栏
 sidebar: true                           # 是否开启侧边栏.
 sidebar-about-description: "..."
@@ -17,6 +42,10 @@ sidebar-avatar: img/morty.png      # 你的个人头像 这里你可以改成我
 # Featured Tags
 featured-tags: true                     # 是否使用首页标签
 featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
+
+# Progressive Web Apps
+chrome-tab-theme-color: "#000000"
+service-worker: true
 
 # SNS settings  社交账号
 RSS: false
@@ -34,4 +63,4 @@ disqus_username: neomx7
 
 # Google Analytics
 ga_track_id: 'UA-124495208-1'            # Format: UA-xxxxxx-xx
-ga_domain: auto
+ga_domain:  www.writeisok.com            # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
